--- a/index.html
+++ b/index.html
@@ -5,22 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Tempo </title>
 
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="public/css/style.css" />
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
-    <nav class="navbar navbar-default">
+    <nav id="header" class="navbar">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -35,23 +31,37 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-collapse">
-                <form class="navbar-form navbar-left" role="search">
+                <form class="navbar-form navbar-left search" role="search">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                        <input type="text" class="form-control">
+                        <button type="submit" class="btn btn-default submit">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
                     </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
                 </form>
                 <ul class="nav navbar-nav menu">
-                    <li class="active"><a href="#"><span>Projects</span></a></li>
+                    <li class="active">
+                        <a href="#"><span>Projects</span>
+                        </a>
+                    </li>
                     <li><a href="#"><span>Timesheet</span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Notifications</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <li class="notifications">
+                        <a href="#">
+                        <span class="glyphicon glyphicon-bell"></span>
+                        <span class="menu-label">Notifications</span>
+                        </a>
+                    </li>
+                    <li class="dropdown user">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                            <img src="https://avatars0.githubusercontent.com/u/884441?v=3&s=40" height="20" />
+                            Shine-neko
+                            <span class="caret"></span>
+                        </a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#">Profil</a></li>
-                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -59,155 +69,163 @@
         </div><!-- /.container-fluid -->
     </nav>
     <div class="content">
-        <div class="col-md-6">
-        </div>
-        <div class="col-md-6 chat-panel">
-            <nav class="rooms">
-                <ul>
-                    <li><a href="#">Room 1</a> </li>
-                    <li><a href="#">Room 2</a> </li>
-                    <li><a href="#">Room 4</a> </li>
-                    <li><a href="#">Room 5</a> </li>
-                </ul>
-            </nav>
-            <div class="user-connected">
-                <h5>0 Connected users</h5>
+        <div class="row">
+            <div class="col-md-6 activity-box">
+                <div id="dashboard-activities">
+                    Lorem Ipsum
+                </div>
             </div>
-            <ul class="inbox">
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-                <li class="message">dddd</li>
-            </ul>
-            <form>
-                <input class="form-control" placeholder="Message" />
-            </form>
+            <div class="col-md-6 chat-panel">
+                <nav class="rooms">
+                    <ul>
+                        <li class="current"><a href="#">Room 1</a> </li>
+                        <li><a href="#">Room 2</a> </li>
+                        <li><a href="#">Room 4</a> </li>
+                        <li><a href="#">Room 5</a> </li>
+                    </ul>
+                </nav>
+                <div class="user-connected">
+                    <h5 class="pull-left">0 connected users</h5>
+                    <a class="toolbar-btn pull-right"><span class="glyphicon glyphicon-chevron-up"></span></a>
+                </div>
+                <ul class="inbox">
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                    <li class="message">dddd</li>
+                </ul>
+                <form>
+                    <input class="form-control" placeholder="Message" />
+                </form>
+            </div>
         </div>
     </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="bower_components/underscore/underscore-min.js"></script>
+<script src="bower_components/backbone/backbone-min.js"></script>
 </body>
 </html>
