--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="notifications">
-                        <a href="#">
+                        <a href="#" class="dropdown-toggle">
                         <span class="glyphicon glyphicon-bell"></span>
                         <span class="menu-label">Notifications</span>
                         </a>
